[package]
name = "ferveo-common"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0"
authors = ["Heliax AG <hello@heliax.dev>"]

[dependencies]
ark-std = "0.4"
ark-ec = "0.4"
serde = { version = "1.0", features = ["derive"] }
ark-serialize = {version = "0.4", features = ["derive"]}
serde_with = "2.2.0"

[dev-dependencies]
ark-bls12-381 = "0.4"
serde_json = "1.0"
bincode = "1.0"

[profile.release]
opt-level = 3
lto = true
