[package]
name = "ferveo-common-pre-release"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"
authors = ["Heliax AG <hello@heliax.dev>", "Piotr Roslaniec <p.roslaniec@gmail.com>"]
description = "Common types and traits for Ferveo"

[dependencies]
ark-ec = "0.4"
ark-serialize = { version = "0.4", features = ["derive"] }
ark-std = "0.4"
bincode = "1.3.3"
generic-array = "0.14.7"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.2.0"

[dev-dependencies]
ark-bls12-381 = "0.4.0"
