[package]
name = "ferveo-python"
authors = ["Piotr Roslaniec <p.roslaniec@gmail.com>"]
version = "0.1.13"
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "ferveo_py"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
ferveo = { path = "../ferveo", features = ["bindings-python"] }
pyo3 = "0.18.2"

# We avoid declaring "pyo3/extension-module" in `dependencies` since it causes compile-time issues:
# https://github.com/PyO3/pyo3/issues/340
# Instead, we expose it in certain cases:
# https://github.com/PyO3/maturin/issues/325
[tool.maturin]
features = ["pyo3/extension-module"]

[build-dependencies]
pyo3-build-config = "*"
