[package]
name = "ferveo-python"
authors = ["Piotr Roslaniec <p.roslaniec@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/nucypher/ferveo"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
ferveo = { package = "ferveo-pre-release", path = "../ferveo", features = ["bindings-python"] }
pyo3 = "0.18.2"

[build-dependencies]
pyo3-build-config = "*"
