[package]
name = "ferveo-wasm"
version = "0.1.1"
authors = ["Piotr Roslaniec <p.roslaniec@gmail.com>"]
edition = "2021"
license = "GPL-3.0-only"
readme = "README.md"
categories = ["cryptography", "no-std"]
repository = "https://github.com/nucypher/ferveo"
description = "WASM bindings for group-threshold-cryptography crate"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ferveo = { path = "../ferveo", features = ["bindings-wasm"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.28"
itertools = "0.10.5"

