[package]
name = "ferveo-wasm"
version = "0.1.0"
authors = ["Piotr Roslaniec <p.roslaniec@gmail.com>"]
edition = "2021"
license = "GPL-3.0-only"
readme = "README.md"
categories = ["cryptography", "no-std"]
repository = "https://github.com/nucypher/ferveo"
description = "WASM bindings for ferveo crate"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ferveo = { package = "ferveo-pre-release", path = "../ferveo", features = ["bindings-wasm"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.28"
itertools = "0.10.5"

