[package]
name = "ferveo"
version = "0.1.1"
edition = "2018"
license = "GPL-3.0"
repository = "https://gitlab.com/anoma/ferveo"
readme = "README.md"
description = "An implementation of a DKG protocol for front-running protection on public blockchains."
keywords = ["DKG"]
categories = ["cryptography"]
authors = ["Heliax AG <hello@heliax.dev>"]

[dependencies]
group-threshold-cryptography = { path = "../tpke" }
ferveo-common = { path = "../ferveo-common" }
subproductdomain = { path = "../subproductdomain" }
ark-std = "0.3"
ark-bls12-381 = "0.3"
ark-ec = "0.3"
ark-ff = "0.3"
ark-serialize = "0.3"
ark-poly = "0.3"
rand = "0.8"
rand_old = { package = "rand", version = "0.7" } # used by benchmarks/pairing.rs
either = "1.6.1"
miracl_core = "2.3.0"
ed25519-dalek = { version = "1", features = ["serde", "batch"] }
serde = { version = "1.0", features = ["derive"] }
blake2b_simd = "1"
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }
serde_bytes = { version = "0.11" }
bincode = "1.3"
anyhow = "1.0"
subtle = "2.4"
itertools = "0.10.1"
measure_time = "0.8"
rand_core = "0.6.4"

[dev-dependencies]
criterion = "0.3" # supports pprof, # TODO: Figure out if/how we can update to 0.4
pprof = { version = "0.6", features = ["flamegraph", "criterion"] }
digest = { version = "0.10.0", features = ["alloc"] }

[package.metadata.cargo-udeps.ignore]
development = ["pprof"]

[[example]]
name = "pvdkg"
path = "examples/pvdkg.rs"

#[[bench]]
#name = "pvdkg"
#path = "benches/benchmarks/pvdkg.rs"
#harness = false

[[bench]]
name = "benchmarks"
path = "benches/bench_main.rs"
harness = false

[profile.release]
opt-level = 3
lto = true
