[package]
name = "ferveo-pre-release"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/nucypher/ferveo"
readme = "README.md"
description = "An implementation of a DKG protocol for threshold decryption."
keywords = ["DKG"]
categories = ["cryptography"]
authors = ["Heliax AG <hello@heliax.dev>", "Piotr Roslaniec <p.roslaniec@gmail.com>"]

[lib]
bench = false

[dependencies]
ark-bls12-381 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-poly = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
bincode = "1.3"
ferveo-common = { package = "ferveo-common-pre-release", path = "../ferveo-common", version = "^0.1.1" }
ferveo-tdec = { package = "ferveo-tdec", path = "../ferveo-tdec", features = ["api", "test-common"], version = "^0.2.0" }
hex = "0.4.3"
itertools = "0.10.5"
measure_time = "0.8"
rand = "0.8"
rand_core = "0.6.4"
rand_old = { package = "rand", version = "0.7" } # used by benchmarks/pairing.rs
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.2.0"
subproductdomain = { package = "subproductdomain-pre-release", path = "../subproductdomain", version = "^0.1.0" }
thiserror = "1.0"
zeroize = { version = "1.6.0", default-features = false, features = ["derive"] }
generic-array = "0.14.7"
derive_more = { version = "0.99", default-features = false, features = ["from", "as_ref", "into"] }

# Python bindings
pyo3 = { version = "0.18.2", features = ["macros", "multiple-pymethods"], optional = true }

# WASM bindings
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
js-sys = { version = "0.3.63", optional = true }
wasm-bindgen = { version = "0.2.86", optional = true }
wasm-bindgen-derive = { version = "0.2.1", optional = true }

[dev-dependencies]
criterion = "0.3" # supports pprof, # TODO: Figure out if/how we can update to 0.4
digest = { version = "0.10.0", features = ["alloc"] }
pprof = { version = "0.6", features = ["flamegraph", "criterion"] }
test-case = "3.3.1"

# WASM bindings
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.86", features = ["serde-serialize"] }

[features]
bindings-python = ["pyo3"]
bindings-wasm = ["console_error_panic_hook", "getrandom", "js-sys", "wasm-bindgen", "wasm-bindgen-derive"]

[[example]]
name = "bench_primitives_size"
path = "examples/bench_primitives_size.rs"

#[[bench]]
#name = "pvdkg"
#path = "benches/benchmarks/pvdkg.rs"
#harness = false

[[bench]]
name = "benchmarks"
path = "benches/bench_main.rs"
harness = false

[package.metadata.cargo-machete]
ignored = [
    "getrandom",
    "rand_old" # used by benchmarks/pairing.rs
]

