[package]
name = "subproductdomain-pre-release"
version = "0.1.0-alpha.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Heliax AG <hello@heliax.dev>", "Piotr Roslaniec <p.roslaniec@gmail.com>"]
description = "Implements subproduct domain algorithm"

[dependencies]
anyhow = "1.0.47"
ark-ec = "0.4"
ark-ff = "0.4"
ark-poly = "0.4"
ark-std = "0.4"

[dev-dependencies]
ark-bls12-381 = "0.4"
